--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "android-app-test",
+  "name": "gymtime",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -8,7 +8,11 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky",
+    "check-types": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -44,8 +48,15 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "husky": "^9.1.7",
+    "typescript": "~5.8.3",
+    "lint-staged": "^16.1.2",
+    "@eslint/eslintrc": "^3.3.1"
   },
   "private": true
 }
