--- a/package.json
+++ b/package.json
@@ -34,29 +34,31 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-config-expo": "~9.2.0",
     "husky": "^9.1.7",
-    "typescript": "~5.8.3",
     "lint-staged": "^16.1.2",
-    "@eslint/eslintrc": "^3.3.1"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
